force-app/main/default/objects/KimbleOne__ObjectShare__c/KimbleOne__ObjectShare__c.object-meta.xml
<CustomObject>
    <label>Object Share</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Object Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Shares</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>