force-app/main/default/objects/KimbleOne__ObjectShare__c/fields/KimbleOne__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ObjectId__c</fullName>
    <externalId>true</externalId>
    <label>Object Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>