force-app/main/default/objects/KimbleOne__ObjectShare__c/fields/KimbleOne__ObjectLink__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ObjectLink__c</fullName>
    <formula>HYPERLINK( KimbleOne__ObjectId__c, KimbleOne__ObjectId__c)</formula>
    <label>Object Link</label>
    <type>Text</type>
</CustomField>