force-app/main/default/objects/KimbleOne__ObjectShare__c/fields/KimbleOne__ObjectShareId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ObjectShareId__c</fullName>
    <externalId>true</externalId>
    <label>Object Share Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>