force-app/main/default/objects/KimbleOne__ObjectShare__c/fields/KimbleOne__Reason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Reason__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>