force-app/main/default/objects/KimbleOne__ObjectShare__c/fields/KimbleOne__UserOrGroupId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UserOrGroupId__c</fullName>
    <externalId>true</externalId>
    <label>User Or Group Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>